--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   sqflite: ^2.2.8+4
   path: ^1.8.2
   intl: ^0.18.1
+  modal_bottom_sheet: ^2.1.2
+  flutter_launcher_icons: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+
+flutter_icons:
+  android: "icon"
+  image_path: "assets/icon.png" 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
